# game-server

./: .gitignore  LICENSE  README.md
discord_bot/: Cargo.toml  Dockerfile
discord_bot/src/: main.rs  mc_metrics.rs
terraform/: api_gateway.tf  auto_scaling.tf  ebs.tf  iam.tf  lambda.tf  outputs.tf  sg.tf  template-data  versions.tf  vpc.tf
