[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Scott Kirkpatrick <scottkirk@scottkirk.dev>"]
edition = "2018"

[dependencies]
chrono = "0.4"
humantime = "2.1"
reqwest = "0.11"
serde_json = "1.0"

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend"]
version = "0.10"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "time"]
